--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
         <a href="#roleplay">Roleplay Info</a>
         <a href="#community">Community</a>
         <a href="#resources">Resources</a>
-        <a href="#contact">Contact Us</a>
     </nav>
 </header>
 
 <section id="home">
     <h2>Welcome to the Grenadier Guards Roleplay Community!</h2>
     <p>Join us in our immersive roleplay adventures and experience the history and valor of the Grenadier Guards.</p>
-    <button onclick="alert('Thank you for joining!')">Join Now</button>
+    <button onclick="window.location.href='https://discord.gg/TQyJ2svaRD'">Join Now</button>
 </section>
 
 <section id="about">
@@ -85,19 +84,6 @@
 <section id="resources">
     <h2>Resources</h2>
     <p>Download useful documents and resources to enhance your roleplaying experience.</p>
-</section>
-
-<section id="contact">
-    <h2>Contact Us</h2>
-    <form onsubmit="alert('Message sent!'); return false;">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" required><br>
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" required><br>
-        <label for="message">Message:</label><br>
-        <textarea id="message" required></textarea><br>
-        <button type="submit">Send</button>
-    </form>
 </section>
 
 <footer>
