--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <section id="home">
     <h2>Welcome to the Grenadier Guards Roleplay Community!</h2>
     <p>Join us in our immersive roleplay adventures and experience the history and valor of the Grenadier Guards.</p>
-    <button onclick="window.location.href='https://discord.gg/TQyJ2svaRD'">Join Now</button>
+    <button onclick="window.open('https://discord.gg/TQyJ2svaRD', '_blank')">Join Now</button>
 </section>
 
 <section id="about">
